--- a/copyright.html
+++ b/copyright.html
@@ -66,11 +66,14 @@
     </h3>
 
     <p>
-      1. “UNDERTALE,” including all original characters, storylines, dialogue,
+      “UNDERTALE,” including all original characters, storylines, dialogue,
       artwork, music, sound effects, and associated intellectual property, is
       the copyrighted work of Toby Fox (the “Creator”) and is protected under
       international copyright and trademark laws. All rights not expressly
-      granted in this notice are reserved by the Creator. 1. General Copyright
+      granted in this notice are reserved by the Creator. 
+	</p>
+	<p>
+	  1. General Copyright
       Information You may not sell, redistribute, or otherwise commercially
       exploit UNDERTALE or any portion of its content without express written
       permission from the Creator. This includes, but is not limited to: Direct
@@ -143,6 +146,7 @@
     </p>
   </body>
 </html>
+
 
 
 
