--- a/fanbase.html
+++ b/fanbase.html
@@ -104,7 +104,7 @@
       Bad Time Simulator is an emulator that can be played on your web browser
       with a keyboard. It emulates one of the most iconic fights in Undertale,
       with Sans the Skeleton. The link to play it is
-      <a href="https://jcw87.github.io/c2-sans-fight">here</a>, and the source
+      <a href="https://jcw87.github.io/c2-sans-fight" target="_blank">here</a>, and the source
       code is on github.
     </p>
     <p>&nbsp;</p>
@@ -124,7 +124,7 @@
       Flowey's Time Machine is an unofficial save editor for Undertale. You can
       change multiple aspects of your save file and even generate new ones. The
       link to use it is
-      <a href="https://crumblingstatue.github.io/FloweysTimeMachine">here</a>.
+      <a href="https://crumblingstatue.github.io/FloweysTimeMachine" target="_blank">here</a>.
     </p>
     <p>&nbsp;</p>
     <h2>Undertale mods</h2>
@@ -138,12 +138,13 @@
       />
     </div>
     <ul>
-      <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> - This is a online multplayer mod that works through Steam.</li>
-      <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> - This mod adds color to the original black and white sprites. It adds a nice touch.</li>
-      <li><a href="https://www.romhacking.net/utilities/704">Delta Patcher</a> - This is not really a mod, but a tool to help install them.</li>
+      <li><a href="https://landimizer.itch.io/ut-connect" target="_blank">Undertale Connect</a> - This is a online multplayer mod that works through Steam.</li>
+      <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952" target="_blank">Colored Sprites</a> - This mod adds color to the original black and white sprites. It adds a nice touch.</li>
+      <li><a href="https://www.romhacking.net/utilities/704" target="_blank">Delta Patcher</a> - This is not really a mod, but a tool to help install them.</li>
     </ul>
   </body>
 </html>
+
 
 
 
