--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		   width="200" height="220">
 		<img src="https://art.pixilart.com/bf10ec00e2fe576.png" alt="toriel" 
 		   width="110" height="220">
-		<img src="https://wallpapers.com/images/hd/undertale-sans-pixel-art-f1v7ildkrfez53o3.jpg" alt="sans" 
+		<img src="sans.png" alt="sans" 
 		   width="205" height="220">
 		<img src="https://www.pngkey.com/png/full/797-7974054_image-warriorstale-undyne-spritepng-undertale-au-wiki-undertale.png" alt="undyne" 
 		   width="140" height="220">
@@ -91,6 +91,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
