--- a/timeline.html
+++ b/timeline.html
@@ -1,1 +1,68 @@
+<html>
+	<head>
+		<link rel="icon" type="image/png" href="Firebolt62.png">
+    	<title>UNDERTALE</title>
+	</head>
 
+	<style>
+		@font-face {
+    		font-family: Determination;
+   	 		src: url(DTM-Sans.otf);
+		}
+		body {
+			background-color: #070620;
+			margin: 0;
+      		padding: 0;
+		}
+		h1 {
+			color: white;
+			font-family: 'Determination';
+		}
+		h2 {
+			color: white;
+			font-family: 'Determination';
+		}
+		h3 {
+			color: white;
+			font-family: 'Determination';
+			text-align: center;
+		}
+		p {
+			color: white;
+			font-family: 'Determination';
+		}
+		ul {
+  			list-style-type: none;
+		}
+		nav { 
+		      background-color: #1f1f1f;
+		      padding: 1rem 2rem; display: flex;
+		      justify-content: space-between;
+		      align-items: center;
+			  font-family: 'Determination';
+		}
+	    nav a { 
+		      color: white;
+		      text-decoration: none;
+		      margin-left: 1.5rem;
+		      font-weight: 600;
+			  font-family: 'Determination';
+	    }
+	    nav a:hover { 
+	      opacity: 0.7;
+	    }
+	</style>
+	<nav>
+    	<div style="color:white;font-weight:bold;">UNDERTALE</div>
+    	<div>
+      		<a href='index.html'>Home</a>
+			<a href='fanbase.html'>Fanbase</a>
+      		<a href='info.html'>Information</a>
+      		<a href='https://undertale.com' target="_blank">Official Website</a>
+      		<a href='copyright.html'>Copyright</a>
+          <a href='timeline.html'>History of the Game</a>
+    	</div>
+  	</nav>
+	<body>
+	</body>
+</html>
