--- a/info.html
+++ b/info.html
@@ -61,6 +61,7 @@
       		<a href='info.html'>Information</a>
       		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
+			<a href='timeline.html'>History of the Game</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -165,6 +166,7 @@
 
     </body>
 </html>
+
 
 
 
