--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       		<a href='info.html'>Information</a>
       		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
+			<a href='timeline.html'>History of the Game</a>
     	</div>
   	</nav>
 	<h1 style="text-align:center">UNDERTALE
@@ -91,6 +92,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
