--- a/fanbase.html
+++ b/fanbase.html
@@ -77,6 +77,7 @@
         		<a href='info.html'>Information</a>
         		<a href='https://undertale.com' target="_blank">Official Website</a>
         		<a href='copyright.html'>Copyright</a>
+			    <a href='timeline.html'>History of the Game</a>
       	</div>
     	</nav>
     <h1 style="text-align: left">
@@ -144,6 +145,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
