--- a/copyright.html
+++ b/copyright.html
@@ -57,6 +57,7 @@
       		<a href='info.html'>Information</a>
       		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
+			<a href='timeline.html'>History of the Game</a>
     	</div>
   	</nav>
   <body>
@@ -146,6 +147,7 @@
     </p>
   </body>
 </html>
+
 
 
 
