--- a/timeline.html
+++ b/timeline.html
@@ -13,6 +13,12 @@
 			background-color: #070620;
 			margin: 0;
       		padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-family: 'Determination';
+			flex-direction: column;
+			color: #007fff;
 		}
 		h1 {
 			color: white;
@@ -21,18 +27,10 @@
 		h2 {
 			color: white;
 			font-family: 'Determination';
+			font-size: 1.5em;
+			letter-spacing: 2px;
+			text-transform: uppercase;
 		}
-		h3 {
-			color: white;
-			font-family: 'Determination';
-			text-align: center;
-		}
-		p {
-			color: white;
-			font-family: 'Determination';
-		}
-		ul {
-  			list-style-type: none;
 		}
 		nav { 
 		      background-color: #1f1f1f;
@@ -51,6 +49,20 @@
 	    nav a:hover { 
 	      opacity: 0.7;
 	    }
+		#timeline {
+			list-style: none;
+			padding-left: 30px;
+			width: 300px;
+			border-left: 8px solid #007fff;
+			margin-left: 9%;
+		}
+		#timeline li {
+			margin: 40px 0;
+			position: relative;
+		}
+		#timeline p {
+			margin: 0 0 15px;
+		}
 	</style>
 	<nav>
     	<div style="color:white;font-weight:bold;">UNDERTALE</div>
