--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 			It stands out for its memorable characters, and the freedom of choice you have as a player.
 			Because of its beautiful pixel art style and amazing lore, Undertale remains one of the most loved games in the world.
 		<p>
-		<img src="https://i.redd.it/7ox1et0f5t3f1.png" alt="frisk" 
+		<img src="images/frisk.png" alt="frisk" 
 		   width="200" height="220">
-		<img src="https://art.pixilart.com/bf10ec00e2fe576.png" alt="toriel" 
+		<img src="images/toriel.png" alt="toriel" 
 		   width="110" height="220">
-		<img src="sans.png" alt="sans" 
+		<img src="images/sans.png" alt="sans" 
 		   width="175" height="220">
-		<img src="https://www.pngkey.com/png/full/797-7974054_image-warriorstale-undyne-spritepng-undertale-au-wiki-undertale.png" alt="undyne" 
+		<img src="images/undyne.png" 
 		   width="140" height="220">
 		<h2>
 		</h2>
@@ -92,6 +92,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
