--- a/timeline.html
+++ b/timeline.html
@@ -31,7 +31,7 @@ h2 {
   padding-left: 30px;
   width: 300px;
   border-left: 8px solid #007fff;
-  margin-left: 9px;
+  margin: 0 auto;
 }
 #timeline li {
   margin: 40px 0;
