--- a/timeline.html
+++ b/timeline.html
@@ -31,7 +31,9 @@ h2 {
   padding-left: 30px;
   width: 300px;
   border-left: 8px solid #007fff;
-  margin: 0 auto;
+  margin: 0 auto;      /* centers */
+  position: relative;
+  left: -4px;          /* visually centers the border */
 }
 #timeline li {
   margin: 40px 0;
