--- a/timeline.html
+++ b/timeline.html
@@ -26,15 +26,12 @@ h2 {
   text-transform: uppercase;
   font-family: 'Determination';
 }
-#timeline {
-  list-style: none;
-  padding-left: 30px;
-  width: 300px;
-  border-left: 8px solid #007fff;
-  margin: 0 auto;      /* centers */
-  position: relative;
-  left: -4px;          /* visually centers the border */
-}
+#timeline { 
+  list-style: none; 
+  padding-left: 30px; 
+  width: 300px; 
+  border-left: 8px solid #007fff; 
+  margin-left: 0px; }
 #timeline li {
   margin: 40px 0;
   position: relative;
