--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>UNDERTALE</title>
+<title>Timeline Fixed</title>
 <style>
 @font-face {
     font-family: Determination;
@@ -26,12 +26,13 @@ h2 {
   text-transform: uppercase;
   font-family: 'Determination';
 }
-#timeline { 
-  list-style: none; 
-  padding-left: 30px; 
-  width: 300px; 
-  border-left: 8px solid #007fff; 
-  margin-left: 0px; }
+#timeline {
+  list-style: none;
+  padding-left: 30px;
+  width: 300px;
+  border-left: 8px solid #007fff;
+  margin-left: 9px;
+}
 #timeline li {
   margin: 40px 0;
   position: relative;
@@ -141,6 +142,7 @@ nav {
 		justify-content: space-between;
 		align-items: center;
 		font-family: 'Determination';
+	    width: 100%;
 }
 nav a { 
 		color: white;
