--- a/timeline.html
+++ b/timeline.html
@@ -135,14 +135,14 @@ label {
 .radio:checked ~ .content::before {
   opacity: 1;
 }
-nav { 
-		background-color: #1f1f1f;
-		padding: 1rem 2rem; 
-	    display: flex;
-		justify-content: space-between;
-		align-items: center;
-		font-family: 'Determination';
-	    width: 100%;
+nav {
+  width: 100%;
+  background-color: #1f1f1f;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
 }
 nav a { 
 		color: white;
