--- a/timeline.html
+++ b/timeline.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="icon" type="image/png" href="Firebolt62.png">
+    <title>UNDERTALE</title>
+</head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Timeline Fixed</title>
+	
 <style>
 @font-face {
     font-family: Determination;
