--- a/timeline.html
+++ b/timeline.html
@@ -65,7 +65,7 @@
 		  padding-left: 30px;
 		  width: 300px;
 		  border-left: 8px solid #007fff;
-		  margin: 0 auto
+		  margin: 0 auto;
 		  margin-top: 20px;
 		}
 		
