--- a/timeline.html
+++ b/timeline.html
@@ -47,7 +47,7 @@
 		  background: #070620;
 		  margin: 0;
 		  padding: 0;
-		  height: 100vh;
+		  height: 100%;
 		  text-align: center;
 		}
 		
