--- a/timeline.html
+++ b/timeline.html
@@ -163,7 +163,7 @@
 
 <body>
 	<nav>
-    	<div style="color:white;font-weight:bold;">UNDERTALE</div>
+    	<div style="color:white;font-weight:bold;font-family:'Determination';">UNDERTALE</div>
     	<div>
       		<a href='index.html'>Home</a>
 			<a href='fanbase.html'>Fanbase</a>
