--- a/timeline.html
+++ b/timeline.html
@@ -176,7 +176,7 @@
 			<a href='timeline.html'>History of the Game</a>
     	</div>
 	</nav>
-<h2>Hello</h2>
+<h2>The Game's History</h2>
 
 <ul id="timeline">
   <li class="work">
