--- a/timeline.html
+++ b/timeline.html
@@ -141,7 +141,7 @@
 		  background-color: #1f1f1f;
 		  padding: 1rem 2rem;
 		  display: flex;
-		  justify-content: center;
+		  justify-content: space-between;
 		  align-items: center;
 		  box-sizing: border-box;
 		}
