--- a/info.html
+++ b/info.html
@@ -52,6 +52,9 @@
 	    nav a:hover { 
 	      opacity: 0.7;
 	    }
+		html {
+		  overflow: hidden;
+		}
     </style>
 	<nav>
     	<div style="color:white;font-weight:bold;">UNDERTALE</div>
@@ -166,6 +169,7 @@
 
     </body>
 </html>
+
 
 
 
