--- a/fanbase.html
+++ b/fanbase.html
@@ -66,6 +66,9 @@
       nav a:hover { 
         opacity: 0.7;
       }
+	  html {
+	    overflow: hidden;
+	  }
     </style>
   </head>
   <body>
@@ -145,6 +148,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
