--- a/copyright.html
+++ b/copyright.html
@@ -47,6 +47,9 @@
 	nav a:hover { 
 	      opacity: 0.7;
 	    }
+	html {
+		overflow: hidden;
+		}
   </style>
   <title>UNDERTALE</title>
   <nav>
@@ -147,6 +150,7 @@
     </p>
   </body>
 </html>
+
 
 
 
