--- a/timeline.html
+++ b/timeline.html
@@ -184,9 +184,9 @@
   <li class="work">
     <input type="radio" class="radio" id="work5" name="works" checked>
     <div class="relative">
-      <label for="work5">Blah Blahaj</label>
-      <span class="date">1000 BC</span>
-      <span class="circle"></span>
+      <label for="work5">Varus Detected bruv</label>
+      <span class="date">1991</span>
+      <span class="circle">Soviet union collapses few months later</span>
     </div>
     <div class="content">
       <p>Blah blah blah</p>
