--- a/fanbase.html
+++ b/fanbase.html
@@ -14,6 +14,10 @@
         margin: 0;
         padding: 0;
       }
+	  ul {
+		text-align: center;
+		list-style-type: none;
+	  }
 
       h1 {
         color: white;
@@ -31,6 +35,7 @@
       p {
         color: white;
         font-family: 'Determination';
+		text-align: center;
       }
       li {
         color: white;
@@ -66,9 +71,14 @@
       nav a:hover { 
         opacity: 0.7;
       }
-	  html {
-	    overflow: hidden;
+	  ::-webkit-scrollbar {
+  	  display: none;
 	  }
+	  video {
+      display: block;
+      margin: 0 auto;
+	  }
+
     </style>
   </head>
   <body>
@@ -106,11 +116,17 @@
     </div>
     <p>
       Bad Time Simulator is an emulator that can be played on your web browser
-      with a keyboard. It emulates one of the most iconic fights in Undertale,
-      with Sans the Skeleton. The link to play it is
+      with a keyboard. 
+	</p>
+	<p>
+	  It emulates one of the most iconic fights in Undertale,
+      with Sans the Skeleton.
+	</p>
+	<p>
+	  The link to play it is
       <a href="https://jcw87.github.io/c2-sans-fight" target="_blank">here</a>, and the source
       code is on github.
-    </p>
+	</p>
     <p>&nbsp;</p>
     <h2>Flowey's Time Machine</h2>
     <div class="center-row">
@@ -125,12 +141,30 @@
       />
     </div>
     <p>
-      Flowey's Time Machine is an unofficial save editor for Undertale. You can
-      change multiple aspects of your save file and even generate new ones. The
-      link to use it is
+      Flowey's Time Machine is an unofficial save editor for Undertale. 
+	</p>
+	<p>
+	  You can change multiple aspects of your save file and even generate new ones.
+	</p>
+	<p>
+	  The link to use it is
       <a href="https://crumblingstatue.github.io/FloweysTimeMachine" target="_blank">here</a>.
     </p>
     <p>&nbsp;</p>
+	<h2>Fan Songs</h2>
+	<p>
+		Fans have made many, different songs about Undertale.
+	</p>
+	<p>
+		These range from remixes of the original OSTs to entirely original songs.
+	</p>
+	<p>
+		You can listen to one of the most popular ones here (Censored by us):
+	</p>
+	<video width="320" height="240" controls>
+  		<source src="1110.mp4" type="video/mp4">
+	Your browser does not support the video tag.
+	</video>
     <h2>Undertale mods</h2>
     <div class="center-row">
       <img
