--- a/timeline.html
+++ b/timeline.html
@@ -184,24 +184,31 @@
   <li class="work">
     <input type="radio" class="radio" id="work5" name="works" checked>
     <div class="relative">
-      <label for="work5">Varus Detected bruv</label>
-      <span class="date">1991</span>
-      <span class="circle">Soviet union collapses few months later</span>
+      <label for="work5">Early Life</label>
+      <span class="date">1991-2010</span>
+      <span class="circle"></span>
     </div>
     <div class="content">
-      <p>Blah blah blah</p>
+      <p>Toby Fox was born on October 11, 1991 in the United States.
+		  He took a large interest in video games, even at a young age. He played games such as Earthbound and Mother 3.
+		  When he was 17 he made some samll musical projects under the gamertag: "radiation".
+	  </p>
     </div>
   </li>
 
   <li class="work">
     <input type="radio" class="radio" id="work4" name="works">
     <div class="relative">
-      <label for="work4">Blah Blahaj</label>
-      <span class="date">900 BC</span>
+      <label for="work4">First creations</label>
+      <span class="date">2010-2013</span>
       <span class="circle"></span>
     </div>
     <div class="content">
-      <p>Blah blah blah</p>
+      <p>He started composing music for "Homestruck" which was a web comic.
+		  He made tracks including Megalovania which he later added to Undertale.
+		  In 2012 he experimented with a new game idea that combined humor, player choice and a bullet hell style of combat.
+		  This was the starting point for Undertale.
+	  </p>
     </div>
   </li>
 
