--- a/info.html
+++ b/info.html
@@ -52,9 +52,9 @@
 	    nav a:hover { 
 	      opacity: 0.7;
 	    }
-		html {
-		  overflow: hidden;
-		}
+		::-webkit-scrollbar {
+  	  	  display: none;
+	    }
     </style>
 	<nav>
     	<div style="color:white;font-weight:bold;">UNDERTALE</div>
@@ -169,6 +169,7 @@
 
     </body>
 </html>
+
 
 
 
