--- a/timeline.html
+++ b/timeline.html
@@ -160,9 +160,9 @@
 		div {
 		  font-family: 'Determination'
 		}
-		html {
-		overflow: hidden;
-		}
+		::-webkit-scrollbar {
+  	  	  display: none;
+	    }
 
 	</style>
 
