--- a/copyright.html
+++ b/copyright.html
@@ -47,9 +47,9 @@
 	nav a:hover { 
 	      opacity: 0.7;
 	    }
-	html {
-		overflow: hidden;
-		}
+	::-webkit-scrollbar {
+  	  	  display: none;
+	  }
   </style>
   <title>UNDERTALE</title>
   <nav>
@@ -150,6 +150,7 @@
     </p>
   </body>
 </html>
+
 
 
 
