--- a/timeline.html
+++ b/timeline.html
@@ -80,7 +80,7 @@
 		  background: #0d082f;
 		  border: 2px solid transparent;
 		  border-radius: 10px;
-		  max-width: 240px;
+		  max-width: 300px;
 		  transition: all 0.4s ease;
 		  opacity: 0;
 		  transform: translateX(-10px);
@@ -191,7 +191,7 @@
     <div class="content">
       <p>Toby Fox was born on October 11, 1991 in the United States.
 		  He took a large interest in video games, even at a young age. He played games such as Earthbound and Mother 3.
-		  When he was 17 he made some samll musical projects under the gamertag: "radiation".
+		  When he was 17 he made some small musical projects under the gamertag: "radiation".
 	  </p>
     </div>
   </li>
@@ -200,7 +200,7 @@
     <input type="radio" class="radio" id="work4" name="works">
     <div class="relative">
       <label for="work4">First creations</label>
-      <span class="date">2010-2013</span>
+      <span class="date">2010-2012</span>
       <span class="circle"></span>
     </div>
     <div class="content">
@@ -215,12 +215,15 @@
   <li class="work">
     <input type="radio" class="radio" id="work3" name="works">
     <div class="relative">
-      <label for="work3">Blah Blahaj</label>
-      <span class="date">800 BC</span>
+      <label for="work3">Creation of Undertale</label>
+      <span class="date">2013-2014</span>
       <span class="circle"></span>
     </div>
     <div class="content">
-      <p>Blah blah blah</p>
+      <p>In June, 2013 Toby Fox launched a Kickstarter for Undertale. His goal was to raise $5,000 but he raised over $50,000!
+	  	  He got a lot of support from fans and community. In 2024 the first playable demo was released to beta testers,
+		  and it recieved very postive feedback for its unique combat system.
+	  </p>
     </div>
   </li>
 
