--- a/timeline.html
+++ b/timeline.html
@@ -84,6 +84,10 @@
 		  transition: all 0.4s ease;
 		  opacity: 0;
 		  transform: translateX(-10px);
+		  word-wrap: break-word;
+          overflow-wrap: break-word;
+          white-space: normal;
+          box-sizing: border-box;
 		}
 		
 		.content::before {
@@ -190,8 +194,8 @@
     </div>
     <div class="content">
       <p>Toby Fox was born on October 11, 1991 in the United States.
-		  He took a large interest in video games, even at a young age. He played games such as Earthbound and Mother 3.
-		  When he was 17 he made some small musical projects under the gamertag: "radiation".
+		  He took a large interest in video games, even at a young age.
+		  He made some smallprojects under the gamertag: "radiation".
 	  </p>
     </div>
   </li>
@@ -204,10 +208,9 @@
       <span class="circle"></span>
     </div>
     <div class="content">
-      <p>He started composing music for "Homestruck" which was a web comic.
+      <p>He started composing music for different sources
 		  He made tracks including Megalovania which he later added to Undertale.
-		  In 2012 he experimented with a new game idea that combined humor, player choice and a bullet hell style of combat.
-		  This was the starting point for Undertale.
+		  In 2012 he experimented with a new game idea that had a bullet hell style of combat.
 	  </p>
     </div>
   </li>
